--- a/package/package.nuspec
+++ b/package/package.nuspec
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <package>
   <metadata>
-    <id>TruePeople.SharePreview</id>
+    <id>TruePeople.SharePreview.v7</id>
     <version>$version$</version>
-    <title>TruePeople.SharePreview</title>
+    <title>TruePeople.SharePreview.v7</title>
     <authors>True People B.V.</authors>
     <owners>True People B.V.</owners>
-    <projectUrl>https://github.com/TruePeople/TruePeople.SharePreview</projectUrl>
+    <projectUrl>https://github.com/rhythmagency/TruePeople.SharePreview.v7</projectUrl>
     <icon>images\icon-128.png</icon>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Share preview URLs with non-Umbraco users!</description>
@@ -15,14 +15,13 @@
 	<license type="expression">MIT</license>
     <dependencies>
       <group targetFramework=".NETFramework4.7.2">
-        <dependency id="UmbracoCms.Core" version="8.2.0" />
-        <dependency id="UmbracoCms.Web" version="8.2.0" />
+        <dependency id="UmbracoCms.Core" version="7.7.0" />
       </group>
     </dependencies>
   </metadata>
   <files>
     <file src="..\assets\icon-128.png" target="images\" />
-    <file src="..\src\TruePeople.SharePreview\bin\Debug\TruePeople.SharePreview.dll" target="lib\net472\" />
-    <file src="..\src\TruePeople.SharePreview\App_Plugins\**" target="content/App_Plugins/"/>
+    <file src="..\src\TruePeople.SharePreview.v7\bin\Debug\TruePeople.SharePreview.v7.dll" target="lib\net472\" />
+    <file src="..\src\TruePeople.SharePreview.v7\App_Plugins\**" target="content/App_Plugins/"/>
   </files>
 </package>
